[package]
name = "rate-limiter-server"
version = "0.1.0"
authors = ["Vedran Vucetic <vedran.vucetic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rate_limiter = { git = "https://github.com/vvucetic/rate-limiter", branch = "master" }
rate_limiter = { path = "../rate-limiter" }
actix-web = "2.0"
actix-rt = "1.0"
pretty_env_logger = "0.4"
serde = "1.0"